syntax = "proto3";

import "proto/list.proto";
import "proto/list_item.proto";

package xmaslist;

option go_package = "github.com/simmonmt/xmaslist/proto/list_service";

message ListListsRequest {
  bool all_lists = 1;
}

message ListListsResponse {
  repeated List lists = 1;
}

message NewListRequest {
  ListData data = 1;
}

message NewListResponse {
  List list = 1;
}

message DeleteListRequest {
  string list_id = 1;
}

message DeleteListResponse {}

message UpdateListRequest {
  string list_id = 1;
  int32 list_version = 2;

  ListData data = 3;
}

message UpdateListResponse {
  List list = 1;
}

message ListListItemsRequest {
  string list_id = 1;
}

message ListListItemsResponse {
  repeated ListItem items = 1;
}

message AddListItemRequest {
  string list_id = 1;
  ListItemData data = 2;
}

message AddListItemResponse {
  ListItem item = 1;
}

message DeleteListItemRequest {
  string list_id = 1;
  string item_id = 2;
}

message DeleteListItemResponse {}

message UpdateListItemRequest {
  string list_id = 1;
  string item_id = 2;
  int32 list_version = 3;

  ListItemData data = 4;
  ListItemState state = 5;
}

message UpdateListItemResponse {
  ListItem item = 1;
}

service ListService {
  rpc ListLists(ListListsRequest) returns (ListListsResponse);
  rpc NewList(NewListRequest) returns (NewListResponse);
  rpc DeleteList(DeleteListRequest) returns (DeleteListResponse);
  rpc UpdateList(UpdateListRequest) returns (UpdateListResponse);
  rpc ListListItems(ListListItemsRequest) returns (ListListItemsResponse);
  rpc AddListItem(AddListItemRequest) returns (AddListItemResponse);
  rpc DeleteListItem(DeleteListItemRequest) returns (DeleteListItemResponse);
  rpc UpdateListItem(UpdateListItemRequest) returns (UpdateListItemResponse);
}
